--- a/tsp_book/mini_book/_config.yml
+++ b/tsp_book/mini_book/_config.yml
@@ -1,12 +1,12 @@
 #######################################################################################
 # Book settings
-title : Scientific Python QuickStart
-author: Thomas J. Sargent and John Stachurski
-logo: 'qe-logo-large.png'
+title : ThermoSysPro educational book
+author: EDF Lab Chatou PRISM and PHIMECA Engineering
+logo: 'logo_tsp.png'
 
 # Short description about the book
 description: >-
-  A brief introduction to Python programming for scientific applications.
+  Learn ThermoSysPro from examples and use cases.
 
 #######################################################################################
 # Execution settings
@@ -25,7 +25,7 @@ notebook_interface            : "notebook"
 #######################################################################################
 # Launch button settings
 repository:
-  url                         : https://github.com/executablebooks/quantecon-mini-example
+  url                         : https://gitlab.com/thermosyspro/educational_book
   path_to_book                : "mini_book"
 
 binder:
@@ -36,3 +36,6 @@ latex:
   latex_engine                : "xelatex"
   latex_documents:
     targetname: book.tex
+
+bibtex_bibfiles:
+   - _bibliography/references.bib
