--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,6 @@
 name: deploy
 
-on:
-  # Trigger the workflow on push to main branch
-  push:
-    branches:
-      - main
+on: [push]
 
 # This job installs dependencies, build the book, and pushes it to `gh-pages`
 jobs:
