--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,16 +20,16 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pip install -r tsp_book/requirements.txt
+        pip install -r requirements.txt
 
     # Build the book
     - name: Build the book
       run: |
-        jupyter-book build tsp_book
+        jupyter-book build .
 
     # Deploy the book's HTML to gh-pages branch
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3.6.1
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: tsp_book/_build/html
+        publish_dir: _build/html
